# torchscript_example

./: CMakeLists.txt  main.cc  main.py
